Fixed bug for anonymous user

--- a/foodmonster/Info.plist
+++ b/foodmonster/Info.plist
@@ -53,7 +53,7 @@
 	<key>FacebookClientToken</key>
 	<string>10eb8c6e8da08019d483afd16a12ab91</string>
 	<key>FacebookDisplayName</key>
-	<string>Gourmet</string>
+	<string>Cooker</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
