--- a/foodmonster/Info.plist
+++ b/foodmonster/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FacebookAdvertiserIDCollectionEnabled</key>
+	<true/>
+	<key>FacebookAutoLogAppEventsEnabled</key>
+	<true/>
 	<key>GIDClientID</key>
 	<string>411637487313-09818svitgvm9jamakcttj3c93e0nvgr.apps.googleusercontent.com</string>
 	<key>NSAppTransportSecurity</key>
